fix card border radius on mobile

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -4,4 +4,4 @@ $lower-color: #1796B7FF;
 $partial-color: orange;
 
 // the border radius for cards
-$card-border-radius: 0.5em;
+$card-border-radius: 4%;
